# KITHUBSys

./: .gitignore  Makefile  README.md  compose.dev.yml  compose.prod.yml  docker-compose.yml  migration.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: check_healthy.yml  deploy.yml
bot/: bot.py  delete_targets.json  keep_ignore.json
bot/cogs/: CogManager.py  MessageDeleteWatcher.py  MessageDeleter.py  MessageExtractor.py  PinMessage.py  QuestionForm.py  RoomAnnounce.py  ThreadKeeper.py  ThreadTimeline.py  TweetStatus.py
bot/config/: bot_config.py  message_config.py
bot/util/: __init__.py  dataio.py
db/migrations/versions/: 20240426033006_f0ad03a86d55_add_models.py  20240426042300_f26d0a8ff8c1_add_room_open_data.py  20240426044615_fac5ef52ade0_fix_room_open_data_structure.py  20240426045914_7234b2f78d8f_fix_room_open_data_structure.py  20240426050047_2ffce2cb4e05_fix_room_open_data_structure.py  20240430035803_e8a1a22011aa_add_techtrain_models.py  20240430040724_65801be797f8_add_sender_id_to_tech_train_invites.py  20240430042330_d57736c1cab9_change_datatypes_in_tech_train_invites.py  20240430051928_7bd7db78a629_fix_column_name_in_tech_train_invite.py  (+1 more)
db/package/: models.py  session.py
db/package/crud/: read_later.py  (+9 more)
discord/: bot.py
discord/cogs/: MessageDeleter.py  MessageExtractor.py  ReadLater.py  RoomAnnounce.py  TechTrainInvite.py  ThreadKeeper.py  ThreadTimeline.py
discord/config/: bot_config.py
dockerfiles/bot/: Dockerfile
envs/: discord.env.example
html/: .htaccess
html/controller/: main.php
html/php/: Database.php
html/views/: base.blade.php
init_db/: 1_structure.sql  2_config_sql.sample  init.sql  init.sql.sample  init_data.sql.sample
pgadmin/config/: servers.json
(+3 files in other folders)
