[tool.poetry]
name = "kithubsys"
version = "1.0.0"
description = "A discord bot stack for KINDAI Info-Tech HUB"
authors = ["Yuki Watanabe <ukwhatn@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.discord]
optional = true
[tool.poetry.group.discord.dependencies]
sentry-sdk = "2.13.0"
py-cord = "2.6.0"
bs4 = "^0.0.2"
httpx = "^0.27.0"
pytz = "^2024.1"

[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
mypy = "^1.11.1"
isort = "^5.13.2"
black = "^24.8.0"

[tool.poetry.group.db]
optional = true
[tool.poetry.group.db.dependencies]
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"
psycopg2-binary = "^2.9.9"
pydantic = "^2.7.4"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"